# hybrid-rendering

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: .clang-format  CMakeLists.txt  bilateral_blur.cpp  bilateral_blur.h  blue_noise.cpp  blue_noise.h  blue_noise_distribution.cpp  blue_noise_distribution.h  common.cpp  common.h  common_resources.h  ddgi.cpp  ddgi.h  deferred_shading.cpp  deferred_shading.h  diffuse_denoiser.cpp  diffuse_denoiser.h  g_buffer.cpp  g_buffer.h  ground_truth_path_tracer.cpp  ground_truth_path_tracer.h  hybrid_rendering.cpp  hybrid_rendering.h  main.cpp  ray_traced_ao.cpp  ray_traced_ao.h  ray_traced_reflections.cpp  ray_traced_reflections.h  ray_traced_shadows.cpp  ray_traced_shadows.h  reflection_denoiser.cpp  reflection_denoiser.h  spatial_reconstruction.cpp  spatial_reconstruction.h  ssa_reflections.cpp  ssa_reflections.h  svgf_denoiser.cpp  svgf_denoiser.h  temporal_aa.cpp  temporal_aa.h  (+6 more)
src/shaders/: a_trous.comp  ambient_occlusion.rgen  ao_denoise_bilateral_blur.comp  ao_denoise_blur.comp  ao_denoise_downsample.comp  ao_denoise_gaussian_blur.comp  ao_denoise_history_fix.comp  ao_denoise_recurrent_blur.comp  ao_denoise_reprojection.comp  ao_denoise_stabilization.comp  ao_ray_trace.comp  ao_upsample.comp  bilateral_blur.comp  bnd_sampler.glsl  brdf.glsl  common.glsl  copy.frag  deferred.frag  denoiser_reconstruction.comp  edge_stopping.glsl  g_buffer.frag  g_buffer.vert  gi_reprojection.comp  indirect_diffuse.rchit  indirect_diffuse.rgen  indirect_diffuse.rmiss  lighting.glsl  mesh.frag  mesh.rchit  mesh.rgen  mesh.vert  noise.glsl  path_trace.rchit  path_trace.rgen  path_trace.rmiss  random.glsl  ray_query.glsl  reflection.rchit  reflection.rgen  reflection.rmiss  (+25 more)
src/shaders/ao/: ao_denoise_bilateral_blur.comp  ao_denoise_disocclusion_blur.comp  ao_denoise_reprojection.comp  ao_denoise_reset_args.comp  ao_ray_trace.comp  ao_upsample.comp
src/shaders/gi/: gi_border_update.glsl  gi_common.glsl  gi_depth_border_update.comp  gi_depth_probe_update.comp  gi_irradiance_border_update.comp  gi_irradiance_probe_update.comp  gi_probe_update.comp  gi_probe_update.glsl  gi_probe_visualization.frag  gi_probe_visualization.vert  gi_ray_trace.rchit  gi_ray_trace.rgen  gi_ray_trace.rmiss  gi_sample_probe_grid.comp
src/shaders/ground_truth/: ground_truth_path_trace.rchit  ground_truth_path_trace.rgen  ground_truth_path_trace.rmiss
src/shaders/reflections/: reflections_denoise_atrous.comp  reflections_denoise_copy_tiles.comp  reflections_denoise_reprojection.comp  reflections_ray_trace.rchit  reflections_ray_trace.rgen  reflections_ray_trace.rmiss  reflections_upsample.comp
src/shaders/shadows/: denoise_reprojection.comp  shadows_denoise_atrous.comp  shadows_denoise_copy_shadow_tiles.comp  shadows_denoise_copy_uniform_tiles.comp  shadows_denoise_reprojection.comp  shadows_denoise_reset_args.comp  shadows_ray_trace.comp  shadows_upsample.comp
