cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

project("HybridRendering")

set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "ASSIMP_BUILD_ASSIMP_TOOLS")
set(ASSIMP_BUILD_ASSIMP_VIEW OFF CACHE BOOL "ASSIMP_BUILD_ASSIMP_VIEW")
set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "ASSIMP_BUILD_TESTS")
set(ASSIMP_INSTALL OFF CACHE BOOL "ASSIMP_INSTALL")
set(ASSIMP_INSTALL_PDB OFF CACHE BOOL "ASSIMP_INSTALL_PDB")
set(ASSIMP_NO_EXPORT ON CACHE BOOL "ASSIMP_NO_EXPORT")
set(BUILD_SAMPLES OFF CACHE BOOL "BUILD_SAMPLES")
set(USE_VULKAN ON CACHE BOOL "USE_VULKAN")
set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW_BUILD_DOCS")
set(GLFW_INSTALL OFF CACHE BOOL "GLFW_INSTALL")

IF(APPLE)
	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LANGUAGE_STANDARD "c++14")
	set(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
ENDIF()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/lib")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

add_subdirectory(external/dwSampleFramework)

include_directories("${DW_SAMPLE_FRAMEWORK_INCLUDES}")

add_subdirectory(src)